Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkgcore 0.5.7: December 22, 2009

* added pinspect script; used for basic reporting of metadata usage,
  and inspection of pkgsets.  Bit simple, but will be expanded down the line.

* filter-env is now installed into PATH; cli api isn't considered stable,
  but it should be useful for folks playing w/ bash environments or doing
  ebuild inspection.

* correct a tb in pmerge when the user configuration is strictly a single
  source repository.  Semi rare, but can occur.

* correct a tb when throwing a missing file error for specifying package.*
  settings directly to domain.

* correct a tb in profiles expansion code of USE_EXPAND and USE_EXPAND_HIDDEN
  when they're completely undefined in the profile stack.  Rare, but if a
  user is building a custom profile stack from the ground up, it's possible
  to hit it.

* gentoo upstream bug 297933; filter BASHOPTS to keep bash 4.1 happy.

* correct an encoding issue in making binpkgs when an ebuild is utf8

* fix a traceback in pmerge -fK when trying to fetch required files for
  binpkgs.


pkgcore 0.5.6: December 13th, 2009

* tweak pkgcore configuration subsystem to tell you the parameter involved
  when it's passed an incorrectly typed object.

* fix an encoding issue w/ utf8 ebuilds on merging.


pkgcore 0.5.5: November 26th, 2009

* portage changed their flat_hash support a while back, specifically
  how mtime was stored.  We match that now (although it's daft to do so)
  for compatibility sake- primarily affected CVS users.

* removed a potential in the merge engine where triggers that didn't
  do an abspath on items they added could incorrectly be moved.
  Specifically affected FEATURES=debugedit for /usr/lib -> lib64 pathways.

* boolean restrictions now default to being finalized.

* pkgcore.fs.ops.offset_rewriter -> pkgcore.fs.contents.offset_rewriter
